# BattleShip

./: .gitignore  .gitmodules  BUILDING.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
android/: .gitignore
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/battleship/android/: AssetCopyUtil.java  ControllerButtons.java  DialogActivity.java  MainActivity.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
assets/: icon.icns
cmake/: AndroidLibusb.cmake
debug_tools/gbi_diff/: capture_and_diff.sh
debug_tools/m64p_screenshot/: m64p_screenshot.py
docs/: architecture.md  build_and_tooling.md  debug_gbi_trace.md  freeze_frame_rcp_clock_design_2026-04-26.md  issue128_investigation_2026-05-03.md  netcode_agent_rules.md  netplay_architecture.md  relocdata_p15_followup_2026-05-03.md  widescreen_16_9_plan_2026-05-10.md
docs/bugs/: README.md  attract_freeze_vi_idle_present_2026-05-01.md  audio_adpcm_codebook_stale_slots_2026-05-02.md  audio_envmix_ramp_overflow_2026-05-08.md  audio_int32_acc_save_load_bridge_2026-04-29.md  audio_output_filter_overshoot_clip_2026-04-29.md  dl_link_stale_pointer_guard_2026-05-09.md  fb_passthrough_v_flip_linux_nvidia_2026-05-11.md  g_vtx_unresolved_addr_guard_2026-05-03.md  inishie_efgrounddatas_array_short_2026-05-02.md  intro_jungle_state_leak_2026-05-02.md  intro_run_impact_flash_unstub_2026-05-02.md  itattackevent_size_double_fixup_2026-05-01.md  linux_stale_scene_data_family_2026-05-11.md  menu_relocfile_id0_collision_2026-05-10.md  npikachu_particlebankid_lp64_overrun_2026-05-01.md  opengl_fb_capture_y_flip_double_invert_2026-05-03.md  opening_sector_dl_buffer_overflow_2026-05-12.md  oscontinit_locate_throw_ci_install_prefix_2026-05-03.md  overscan_inset_strip_2026-05-08.md  raphnet_get_version_retry_2026-05-04.md  samus_charge_loop_sfx_pause_leak_2026-05-03.md  sdl2_backend_destroy_uninit_pointers_2026-05-01.md  sprite_lut_stale_token_segv_2026-05-08.md  updater_appimage_ld_library_path_2026-05-13.md  vs_transition_photo_y_flip_2026-05-09.md  wallpaper_min_scale_2026-05-09.md  zako_stock_sprite_unfixed_2026-05-01.md
include/: reloc_data.h  stddef.h
port/: coroutine.h  coroutine_android.cpp  coroutine_android_aarch64.S  coroutine_posix.cpp  first_run.cpp  gameloop.cpp  port.cpp  port_dl_ranges.cpp  port_dl_ranges.h  port_watchdog.cpp
port/android/: android_jni.cpp
port/audio/: audio_playback.cpp  mixer.c  mixer.h
port/bridge/: framebuffer_capture.cpp  framebuffer_capture.h  lbreloc_bridge.cpp  lbreloc_byteswap.cpp  lbreloc_byteswap.h
port/decomp-patches/: lbcommon-force-2d-point-filter.patch  lbcommon-port-sprite-reloc-tokens.patch  mntitle-fire-global-filter.patch  overscan-inset-strip.patch  wallpaper-min-scale.patch  wallpaper-route-global-filter.patch
port/enhancements/: AnalogRemap.cpp  CStickSmash.cpp  DPadJump.cpp  DisableStageHazards.cpp  HitboxView.cpp  ShaderDownloader.cpp  TapJump.cpp  UnlockCheats.cpp  Updater.cpp  enhancements.cpp  enhancements.h
port/enhancements/internal/: buttons.h
port/gui/: Compat.h  Menu.cpp  Menu.h  MenuTypes.h  PortMenu.cpp  PortMenu.h  UIWidgets.cpp  UIWidgets.hpp
port/libultraship-patches/: gfx_opengl-gles-framebuffer-srgb.patch
port/render/: force_point_filter.cpp  force_point_filter.h
port/resource/: RelocFileTable.cpp  RelocPointerTable.cpp  RelocPointerTable.h
port/stubs/: n64_stubs.c  port_diag_stubs.c
port/widescreen/: widescreen.cpp  widescreen.h
scripts/: new-worktree.sh  package-linux.sh  package-macos.sh  package-windows.ps1
src/ef/: efground.c
src/ft/: ftdata.c  ftmanager.c
src/ft/ftchar/ftnpikachu/: ftnpikachu.c  ftnpikachu.h
src/lb/: lbcommon.c  lbfade.c
src/mn/mnplayers/: mnplayersvs.c
src/sc/: scmanager.c
src/sc/sc1pmode/: sc1pgame.c
src/sc/sccommon/: scvsbattle.c
src/sys/: controller.c  netinput.c  netinput.h  netpeer.c  netpeer.h  netreplay.h  objdisplay.c  rdp.c  utils.h
tools/: audit_text_diffs.sh  compare_obj_text.sh  generate_reloc_stubs.py  generate_yamls.py  relocFileDescriptions.us.txt  save_editor.py  upstream_reconcile.py
yamls/us/: reloc_animations.yml  reloc_menus.yml
